<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.phonepe.platform</groupId>
    <artifactId>bonsai</artifactId>
    <packaging>pom</packaging>
    <version>1.0.41-SNAPSHOT</version>

    <modules>
        <module>bonsai-models</module>
        <module>bonsai-json-eval</module>
        <module>bonsai-core</module>
    </modules>

    <parent>
        <groupId>com.phonepe</groupId>
        <artifactId>pp-parent-pom</artifactId>
        <version>0.88</version>
    </parent>

    <properties>
        <!--intellij module setting-->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
        <maven.deploy.skip>false</maven.deploy.skip>
        <maven.javadoc.skip>true</maven.javadoc.skip>

        <!--lib versions-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lombok.version>1.18.30</lombok.version>
        <mockito.version>2.28.2</mockito.version>
        <jackson.version>2.9.9</jackson.version>
        <hamcrest.all.version>1.3</hamcrest.all.version>
        <guava.version>32.1.3-jre</guava.version>
        <slf4j.version>1.7.25</slf4j.version>

        <junit.jupiter.version>5.8.2</junit.jupiter.version>
        <junit.mockito.version>4.11.0</junit.mockito.version>
        <junit.wiremock.version>2.27.2</junit.wiremock.version>

        <!--sonar settings-->
        <sonar.coverage.exclusions>
            **com/phonepe/platform/bonsai/core/structures/CollectorFunctions*,
            **com/phonepe/platform/bonsai/models/**,
            **com/phonepe/platform/bonsai/json/eval/**
        </sonar.coverage.exclusions>

        <sonar.exclusions>
            **com/phonepe/platform/bonsai/core/structures/CollectorFunctions*
        </sonar.exclusions>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <artifactId>slf4j-api</artifactId>
                <groupId>org.slf4j</groupId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>${slf4j.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${junit.mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${junit.mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>${junit.mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <repositories>
        <repository>
            <id>phonepe-releases</id>
            <name>releases</name>
            <url>https://artifactory.phonepe.com/repository/releases</url>
        </repository>
        <repository>
            <id>phonepe-snapshots</id>
            <name>snapshots</name>
            <url>https://artifactory.phonepe.com/repository/snapshots</url>
        </repository>
        <repository>
            <id>clojars</id>
            <name>Clojars repository</name>
            <url>https://repo.clojars.org</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>phonepe-releases</id>
            <name>releases</name>
            <url>https://artifactory.phonepe.com/repository/releases</url>
        </repository>
        <snapshotRepository>
            <id>phonepe-snapshots</id>
            <name>snapshots</name>
            <url>https://artifactory.phonepe.com/repository/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>

            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
                <version>5.22.0</version>
                <configuration>
                    <activeRecipes>
                        <recipe>org.openrewrite.java.migrate.util.ReplaceStreamCollectWithToList</recipe>
                    </activeRecipes>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-testing-frameworks</artifactId>
                        <version>2.3.2</version>
                    </dependency>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-static-analysis</artifactId>
                        <version>1.3.0</version>
                    </dependency>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-migrate-java</artifactId>
                        <version>2.8.0</version>
                    </dependency>
                    <dependency>
                        <groupId>com.livetheoogway.recipes</groupId>
                        <artifactId>rewrite-static-analysis</artifactId>
                        <version>1.0-SNAPSHOT</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>Tushar-Naik</id>
            <name>Tushar Naik</name>
            <email>tushar.naik@phonepe.com</email>
        </developer>
        <developer>
            <id>suraj.s</id>
            <name>Suraj Singh</name>
            <email>suraj.s@phonepe.com</email>
        </developer>
    </developers>

</project>